# agentscope-samples

./: .all-contributorsrc  COMINGSOON.md  CONTRIBUTING.md  CONTRIBUTING_GUIDELINES.md  CONTRIBUTING_en.md  CONTRIBUTING_zh.md  README.md  README_zh.md  _version.py  pyproject.toml  setup.py
deep_research/local_deep_research/: .env.example  .gitignore  README.md  config.yaml.example  configuration.py  main.py  offline_loading.py  pyproject.toml
deep_research/local_deep_research/agent/: __init__.py  local_deep_research_agent.py
deep_research/local_deep_research/api/: __init__.py  app.py  config.py  dependencies.py  main.py  models.py
deep_research/local_deep_research/api/routers/: documents.py  research.py
deep_research/local_deep_research/built_in_prompt/: prompt_decompose_subtask.md  prompt_deeper_expansion.md  prompt_inprocess_report.md  prompt_tool_usage_rules.md
deep_research/local_deep_research/embedding/: __init__.py  aliyun_embedding.py  base.py  openai_embedding.py  sentence_transformer_embedding.py  siliconflow_embedding.py
deep_research/local_deep_research/loader/: splitter.py
deep_research/local_deep_research/loader/file_loader/: __init__.py  docling_loader.py  json_loader.py  pdf_loader.py  text_loader.py  unstructured_loader.py
deep_research/local_deep_research/loader/web_crawler/: __init__.py  (+4 more)
deep_research/local_deep_research/scripts/: README.md  __init__.py  load_agentscope_docs.sh  urls_to_load.json
deep_research/local_deep_research/tools/: __init__.py  vector_search_tool.py
deep_research/local_deep_research/utils/: __init__.py  log.py  utils.py
deep_research/local_deep_research/vector_db/: __init__.py  base.py  milvus.py
(+132 files in other folders)
