[project]
name = "agentscope-samples"
version = "0.1.0"
description = "AgentScope Sample Agents: Ready-to-use multi-agent examples built on AgentScope and AgentScope Runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

optional-dependencies = { full = ["agentscope[dev]>=1.0.5", "agentscope_runtime>=0.1.5", "pyyaml>=6.0.2", "quart>=0.8.0", "quart-cors>=0.8.0", "flask_sqlalchemy>=3.1.1", "flask>=3.1.2", "flask_cors>=6.0.1"], dev = ["pre-commit", "pytest", "sphinx-gallery", "furo", "myst_parser", "matplotlib"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"